[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdxpy"
version = "0.1.0"
authors = [
  { name="Rskhm", email="rskhm@gmail.com" },
]
description = "A small package to convert python data structures to Pdxscript."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xxxAnn/pdxpy"
Issues = "https://github.com/xxxAnn/pdxpy/issues"